test_programs/compile_failure/noirc_frontend_tests_enums_unreachable_match_case/src/main.nr

        fn main() {
            match Opt::Some(Opt::Some(3)) {
                Opt::Some(_) => (),
                Opt::None => (),
                Opt::Some(Opt::Some(_)) => (),
            }
        }

        enum Opt<T> {
            None,
            Some(T),
        }
    